Fixed bug #32674 (exception in iterator causes crash)